# uhh_project_dsai

./: .gitignore  .python-version  47_SPECIES_SIGNIFICANCE.md  IMPLEMENTATION_DETAILS.md  METRICS_ENHANCEMENT_SUMMARY.md  README.md  V2_IMPLEMENTATION_SUMMARY.md  WHY_50_PERCENT_ACCURACY.md  config.py  data.py  main.py  mlflow.db  pyproject.toml  test.txt  v2_test_results.txt
analysis/: CODE_ANALYSIS.md  DETAILED_FEATURE_EXTRACTION.md  PREPROCESSING_COMPARISON.md
archs/: train.py  train_lightning.py
archs/baseline/: requirements.txt  test.py  train.py
archs/baseline_arch/: README.md  arch.py  dataclass.py
archs/v1/: ARCHITECTURE.md  arch.py  lightning_module.py  train.py
archs/v2/: ARCHITECTURE.md  __init__.py  arch.py  augmentation.py  lightning_module.py
archs/v3/: __init__.py  arch.py  lightning_module.py
archs/v4/: ARCHITECTURE.md  __init__.py  arch.py  lightning_module.py
baseline/: data_root  test.py
baseline/checkpoints/: README.txt  protonet_baseline_py312.pt
baseline/model/: encoder.py  prototype_network.py
conf/: config.yaml
conf/arch/: v1.yaml  (+3 more)
docs/: AUDIO_SIGNAL_PROCESSING.md  BASELINE.md  CLI_USAGE.md  CONFIG_REFERENCE.md  DOCUMENTATION_INDEX.md  FEATURES_AND_DATAFLOW.md  METRICS_ENHANCEMENT_SUMMARY.md  MODEL_RESULTS_FINAL.md  PREPROCESSING.md  PROTOTYPICAL_NETWORK.md  V2_IMPLEMENTATION_SUMMARY.md  WORKFLOW.md  test_results.txt  v1_approach.md
models/: segment_example.py
notebooks/: AudioMNIST-GaurikaChopra.ipynb  Chopra_Image_Classification_-_Fashion_MNIST.ipynb  Diksha_AudioMNIST.ipynb  event_detection_viz.ipynb  helper_functions.py  model_performance_analysis.ipynb  nasrul_audio_mnist.ipynb  nasrul_fashion_mnist.ipynb  segmentation.ipynb
postprocessing/: __init__.py
preprocessing/: __init__.py  ann_service.py  cached_dataset.py  dataloaders.py  datamodule.py  dataset.py  feature_cache.py  feature_export.py  list_data.py  preprocess.py
reference/: Prototypical Networks for Few-shot Learning.txt
schemas/: __init__.py  model_choice.py  segment_example.py
utils/: README.md  __init__.py  config.py  data_dir.py  dataclass.py  distance.py  evaluation.py  logger.py  loss.py  mlflow_logger.py  psds_metrics.py  resolve_device.py
viz/: __init__.py  dataset_analysis.ipynb  dataset_visualizer.py  segment_visualizer.py  visualize_dataset.py
(+63877 files in other folders)
