[project]
name = "uhh-project-dsai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "hydra-core>=1.3.2",
    "ipykernel>=7.0.1",
    "librosa>=0.11.0",
    "lightning>=2.6.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.8.0",
    "numpy>=2.3.4",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.1",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]


[project.scripts]
g5 = "main:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["archs", "archs.baseline", "archs.v1", "utils", "preprocessing", "schemas"]
py-modules = ["main", "data"]

[tool.uv]
package = true
