[project]
name = "group5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "hydra-core>=1.3.2",
    "librosa>=0.11.0",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pytorch-lightning>=2.6.0",
    "rich>=14.2.0",
    "torch>=2.9.1",
]
